--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>倒计时</title>
+<title>2019考研倒计时</title>
 <!-- custom-theme -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -59,8 +59,8 @@
     <script>
         $(function(){
             $('#js-countDown').yuukCountDown({
-                starttime: '2016/12/17 00:00:00',
-                endtime: '2018/3/31 10:59:59',
+                starttime: '2018/2/17 00:00:00',
+                endtime: '2018/12/22 8:00:00',
                 notStartCallBack: function(time){
                     console.log("Ready");
                 },
