--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 				</ul>
 			</div>
 		</div>
-		<div class="agileits_copyright" style='position:absolute;bottom:0px;margin:0px;float:left;width:100%;'>
-			<p>Powered by GitHub Pages</p>
+		<div class="agileits_copyright">
+			<p>Nothing is difficult ,if you put your heart into it .</p>
 		</div>
 	</div>
 	<script src="js/jquery-1.12.4.min.js"></script>
