--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</div>
 		</div>
 		<div class="agileits_copyright">
-			<p>Nothing is difficult ,If you put your heart into it .</p>
+			<p>Early to bed and early to rise , makes a man healthy , wealthy , and wise.</p>
 		</div>
 	</div>
 	<script src="js/jquery-1.12.4.min.js"></script>
